	PR middle-end/36013 	* gimplify.c (find_single_pointer_decl_1): Don't look through 	indirections. 	(find_single_pointer_decl): Adjust comments.

* gcc.c-torture/execute/20080506-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@135029 138bc75d-0d04-0410-961f-82ee72b054a4